# rigid_DL

./: .gitignore  README.md  calc_eig_val.py  calc_eigenvals.py  calc_eigenvecs.py  check_global_eigenvalue.py  const_potential_calc.py  direct_calc.py  eigenfunctions.py  eigenvalues.py  elliptic_integrals.py  gauss_quad.py  geometric.py  input_output.py  lin_mesh_test.py  lin_mesh_tests.sh  linear_potential_calc.py  make_ellipsoid.py  mat_assembly.py  matrix_assembly.py  potential_calc.py  potential_calc_v1.py  potential_calc_v2.py  quad_mesh_test.py  quad_mesh_tests.sh  simple_linear_mesh.py  simple_mesh.py  simple_quad_mesh.py  test_quadrature.py
c_src/: CMakeLists.txt  compile.sh  matrix_assem.cpp  matrix_assem.hpp  mobil_assem.cpp
graph_making/: 10-1-1_errors.json  10-10-1_errors.json  4-1-1_errors.json  4-4-1_errors.json  extract_local_error_data.py  local_err_data.json  make_2x2_avg_err.py  make_2x2_max_err.py  make_2x2_plot.py  make_AR_plot.py  make_avg_err_sublplots_num_nodes.py  make_avg_err_subplots.py  make_local_conv_graphs.py  make_max_err_subplots.py  make_param_compare_plots.py  make_plots.sh
lin_ev/: calc_eigenvals.py  calc_eigenvecs.py  eigenvalues.py  elliptic_integrals.py  plot_E12_flow.py  plot_E23_flow.py  plot_E31_flow.py  plot_Em_flow.py  plot_Ep_flow.py  plot_Epm_pyvista.py  plot_flow.py
old_versions/: potential_calc_v1.py
quad_ev/: calc_3x3_evec.py  do_algebra.py  elliptic_integrals.py  options.cfg  plot_Q1_flow.py  plot_Q2_flow.py  plot_Q3_flow.py  plot_Q_flows_pyvista.py  plot_flow.py
rigid_DL/: c_link_test.py  calc_eigenvals.py  (+47 more)
(+19 files in other folders)
